# Ilma

./: .env.example  .gitignore  API_MISSING_ENDPOINTS.md  API_TESTING.md  CONFIGLOADER_CLEANUP_FIX.md  CRYPTO_AUTO_GENERATION_IMPLEMENTATION.md  Cargo.toml  E2E_MESSAGING_FRONTEND_READY.md  E2E_MESSAGING_GUIDE.md  E2E_SETUP_COMPLETE.md  ENVIRONMENT_BASED_TEST_USERS.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_NEW_ENDPOINTS.md  JSON_TEST_CONFIG_GUIDE.md  JSON_TEST_SYSTEM_IMPLEMENTATION.md  MISSING_API_ENDPOINTS.md  RATE_LIMITING.md  RATE_LIMITING_TEST.md  README.md  READY_TO_TEST.md  REAL_CRYPTO_IMPLEMENTATION_COMPLETE.md  SECURITY.md  SECURITY_AUDIT_REPORT.md  TESTING_MODE.md  TESTING_SYSTEM_COMPLETE.md  TEST_ENVIRONMENT_PROTECTION.md  TEST_GUIDE.md  ilma-OpenAPI.yml  issues.yaml  run_message_tests.ps1  test.env  test_cleanup.ps1  test_config.json  test_config_invalid.json  test_config_minimal.json  test_config_new.json  test_credentials.md  test_env_json.env  test_env_users.env  test_env_users.ps1  (+2 more)
.github/chatmodes/: GoGPT.chatmode.md  ISSPEC.chatmode.md
api-deltas/: ilma-OpenAPI-RecAuthDELTA.yml
examples/: real_crypto_demo.rs
src/: auth.rs  configloader.rs  db.rs  errors.rs  lib.rs  main.rs  middleware.rs  models.rs  test_config.rs  utils.rs
src/handlers/: attendance.rs  auth.rs  classes.rs  grades.rs  messages.rs  mod.rs  permissions.rs  schedule.rs  users.rs
test_output/: openapi.json
tests/: auth_integration_tests.rs  crypto_verification_test.rs  message_e2e_tests.rs  openapi_export_test.rs  test_config_new_tests.rs  test_config_tests.rs
